Fix unsafe  casting and remove deprecated Long() usage.
Replace unsafe raw cast in AttendanceRepositoryImpl.getAttendanceCommentsBySectionId
with a typed TypedQuery<AttendanceCommentEntry> .Add graceful exception handling/logging for query failures. Replace deprecated new Long(...) usages with Long.valueOf(...) and validated Long handling in makeup flows.